--- a/FIBRADIS.Api.Tests/FIBRADIS.Api.Tests.csproj
+++ b/FIBRADIS.Api.Tests/FIBRADIS.Api.Tests.csproj
@@ -6,6 +6,7 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXml" Version="3.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.10" />
     <PackageReference Include="xunit" Version="2.7.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.1">
