--- a/FIBRADIS.Api/FIBRADIS.Api.csproj
+++ b/FIBRADIS.Api/FIBRADIS.Api.csproj
@@ -4,4 +4,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FIBRADIS.Application\FIBRADIS.Application.csproj" />
+  </ItemGroup>
 </Project>
