--- a/FIBRADIS.Application/FIBRADIS.Application.csproj
+++ b/FIBRADIS.Application/FIBRADIS.Application.csproj
@@ -7,5 +7,6 @@
   <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" Version="3.0.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Hangfire.Core" Version="1.8.12" />
   </ItemGroup>
 </Project>
