Implement PDF facts parser service and tests

--- a/FIBRADIS.Tests.Integration/FIBRADIS.Tests.Integration.csproj
+++ b/FIBRADIS.Tests.Integration/FIBRADIS.Tests.Integration.csproj
@@ -13,5 +13,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="../FIBRADIS.Application/FIBRADIS.Application.csproj" />
+    <ProjectReference Include="../FIBRADIS.Api/FIBRADIS.Api.csproj" />
   </ItemGroup>
 </Project>
