--- a/FIBRADIS.Application/FIBRADIS.Application.csproj
+++ b/FIBRADIS.Application/FIBRADIS.Application.csproj
@@ -8,5 +8,6 @@
     <PackageReference Include="DocumentFormat.OpenXml" Version="3.0.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
     <PackageReference Include="Hangfire.Core" Version="1.8.12" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.6" />
   </ItemGroup>
 </Project>
